@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-10T01:08:51Z",
+  "timestamp" : "2022-05-10T16:26:44Z",
   "count_outdated" : 171,
   "uniques_outdated" : 40,
-  "count" : 192,
-  "uniques" : 46,
+  "count" : 196,
+  "uniques" : 49,
   "views" : [
     {
       "timestamp": "2022-04-30T00:00:00Z",
@@ -39,6 +39,13 @@
       "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-10T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 0, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 0, 3 ]
     }
   ]
 }
