@@ -1,6 +1,6 @@
 {
-  "count": 21,
-  "uniques": 3,
+  "count": 25,
+  "uniques": 5,
   "views": [
     {
       "timestamp": "2022-04-30T00:00:00Z",
@@ -26,6 +26,11 @@
       "timestamp": "2022-05-09T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-10T00:00:00Z",
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
